--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,21 @@ body {
     background-color: bisque;
 }
 
+
+#container {
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
 footer {
     background-color: black;
     color: white;
